# Edumind

./: .gitignore  Makefile  README.md  start_frontend.bat
backend/: .env.example  alembic.ini  check_db.py  create_db.py  edumind.db  fix_demo.py  fix_repos.py  pyproject.toml  requirements.txt  test_flow.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: main.py
backend/app/api/schemas/: content.py  question.py  speech.py  tracing.py
backend/app/api/v1/: auth.py  content.py  questions.py  speech.py  students.py  teachers.py  tracing.py  tutor.py
backend/app/application/assessment/: grading_service.py  question_generator.py
backend/app/application/content/: rag_service.py
backend/app/application/gap_detector/: gap_service.py
backend/app/application/speech/: speech_service.py
backend/app/application/tracing/: bkt_service.py
backend/app/application/tutor/: tutor_orchestrator.py
backend/app/core/: config.py  database.py  logging.py  middleware.py  security.py
backend/app/domain/entities/: content.py  misconception.py  question.py  student.py
backend/app/domain/interfaces/: assessment_repository.py  gap_repository.py  model_services.py  repositories.py
backend/app/infrastructure/models/: speech_provider.py
backend/app/workers/: celery_app.py
backend/scripts/: init_db.py  seed_data.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_bkt.py  test_entities.py  test_gap_detector.py  test_grading.py  test_question_generator.py  test_rag.py
docs/: CONTRIBUTING.md  (+8 more)
(+34 files in other folders)
